js/js.translator/testData/incremental/invalidation/localObjectsLeakThroughInterface/lib1/interface.2.kt
interface Interface {
    val extraNumber get() = 1

    fun getNumber() = 0

    fun getOtherNumber() = 1
}
